--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<a href="https://t.me/basedbabyturbio" target="_blank" class="btn-icon">
 							<img src="telegram.png" alt="Telegram" class="icon">
 						</a>
-						<a href="https://x.com/basedbabyturbo" target="_blank" class="btn-icon">
+						<a href="https://x.com/erjgoejgnegkneg" target="_blank" class="btn-icon">
 							<img src="x.png" alt="X" class="icon">
 						</a>
 						<a href="https://dexscreener.com/base/0x02578575c7d9384b1f8abd3e65417a4e07c0c4b2" target="_blank" class="btn-icon">
@@ -205,7 +205,7 @@
 			<a href="https://t.me/basedbabyturbio" target="_blank" class="btn-icon">
 				<img src="telegram.png" alt="Telegram" class="icon" style="width:20px">
 			</a>
-			<a href="https://x.com/basedbabyturbo" target="_blank" class="btn-icon">
+			<a href="https://x.com/erjgoejgnegkneg" target="_blank" class="btn-icon">
 				<img src="x.png" alt="X" class="icon" style="width:20px">
 			</a>
 		</div>
