--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 
 	<div class="marquee-container">
 	  <div class="marquee">
-		<div class="marquee-content">$BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo</div>
-		<div class="marquee-content">$BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo $BabyTurbo</div>
+		<div class="marquee-content">$BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO</div>
+		<div class="marquee-content">$BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO $BTURBO</div>
 	  </div>
 	</div>
 
@@ -198,7 +198,7 @@
 	<section id="footer" class="buy-token-guide py-4">
 	  <div class="container">
 		<div class="small-text text-center">© Copyright Baby Turbo</div>
-		<div class="small-text text-center mb-2">$BabyTurbo is a meme coin with no intrinsic value or expectation of financial return.<br> 
+		<div class="small-text text-center mb-2">$BTURBO is a meme coin with no intrinsic value or expectation of financial return.<br> 
 		There is no formal team or roadmap, the coin is completely useless and for enterainment purposes only.</div>
 	  </div>
 		<div class="d-flex justify-content-center gap-2 mt-2">
