--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="col-12 col-md-5">
                     <img src="name_logo.png" alt="Baby Turbo Logo" class="hero-logo">
                     <p class="section-detail-text mt-3 mb-5">
-					Baby Turbo is the resilient baby frog of Base Blockchain with an engaging community and the most innovative AI-driven apps. Join us as we create a fresh and dynamic experience in the world of meme coins!</p>
+					Baby Turbo is the resilient baby frog of Solana Blockchain with an engaging community and the most innovative AI-driven apps. Join us as we create a fresh and dynamic experience in the world of meme coins!</p>
 					<div class="contract-address-title-text text-center">Contract Address</div>
 					<div class="contract-address-text text-center">0x8600649f2BdF9C18F2358EbCFb08DAcCf1f30d39</div>
 					<div class="d-flex justify-content-center gap-3 mt-3">
