--- a/index.html
+++ b/index.html
@@ -87,11 +87,9 @@
                 </div>			
                 <div class="col-12 col-md-10">					
                     <p class="section-detail-text mt-3 mb-4">
-						Born on December 31, 2024, Baby Turbo launched as a Base blockchain token with promises of transparency, safety, and growth. Using Ape Store fair launch protocols featuring no presale, no hidden agendas, and open token allocation, the project aimed to build a truly decentralized and community-driven foundation.<br><br>
+						Born on Jenuary 1, 2025, Baby Turbo launched as a Solana blockchain token with promises of transparency, safety, and growth. Using fair launch with no presale, no hidden agendas, and open token allocation, the project aimed to build a truly decentralized and community-driven foundation.<br><br>
 
-						The token quickly gained momentum, setting a goal of reaching a $69k market cap. Upon hitting the target, $12k of liquidity was added to Uniswap and burned, showcasing an initial commitment to sustainability and long-term growth.<br><br>
-
-						However, on January 7, 2025, the project’s original team failed to uphold its principles, leading to a rug pull that shocked the community. Instead of collapsing, the community united to take control of the project. With renewed determination and leadership from its holders, Baby Turbo has transformed into a stronger, community-driven venture.
+						The token quickly gained momentum, setting a goal of reaching a $1m market cap. Upon hitting the target, $150k of liquidity was added to Raydium and burned, showcasing an initial commitment to sustainability and long-term growth.<br><br>
 					</p>
                 </div>
             </div>
