--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 			<div class="col-12 col-md-12">				
 				<div class="guide-step text-white p-4 mb-4 mx-auto">
 				  <div class="section-subtitle-text text-center mb-2">Create Wallet</div>
-				  <p class="section-detail-text">Install Coinbase or Metamask wallet and follow application instructions to generate new wallet and secure recovery phrase.  You are ready to manage Base assets.</p>
+				  <p class="section-detail-text">Install Phantom wallet and follow application instructions to generate new wallet and secure recovery phrase.  You are ready to manage Solana assets.</p>
 				</div>
 
 				<div class="arrow-box d-flex justify-content-center align-items-center mb-4">
@@ -143,8 +143,8 @@
 				</div>
 
 				<div class="guide-step text-white p-4 mb-4 mx-auto">
-				  <div class="section-subtitle-text text-center mb-2">Purchase Base Ethereum</div>
-				  <p class="section-detail-text">Ensure there are sufficient funds to purchase Base Ethereum. Make the purchase. If you already have Ethereum, you can bridge it over to Base Ethereum.</p>
+				  <div class="section-subtitle-text text-center mb-2">Purchase Solana</div>
+				  <p class="section-detail-text">Ensure there are sufficient funds to purchase Solana. Make the purchase. If you already have SOL, you can bridge it over to Solana.</p>
 				</div>
 
 				<div class="arrow-box d-flex justify-content-center align-items-center mb-4">
@@ -152,8 +152,8 @@
 				</div>
 
 				<div class="guide-step text-white p-4 mb-2 mx-auto">
-				  <div class="section-subtitle-text text-center mb-2">Swap Base Ethereum for Baby Turbo</div>
-				  <p class="section-detail-text">Use the swap feature to convert Base Ethereum for Baby Turbo. You're all set to join the revolution. Buckle up, it's time to turbocharge your next adventure!
+				  <div class="section-subtitle-text text-center mb-2">Swap SOL for Baby Turbo</div>
+				  <p class="section-detail-text">Use the swap feature to convert SOL for Baby Turbo. You're all set to join the revolution. Buckle up, it's time to turbocharge your next adventure!
 				  </p>
 				</div>
 			</div>
@@ -172,11 +172,11 @@
             <div class="row">			
                 <div class="col-12 col-md-9 col-lg-9">
                     <p class="section-detail-text mt-3 mb-4">
-					Baby Turbo token was created through an Ape Store fair launch pad, ensuring safety, transparency, and fairness in its distribution. Ape Store’s robust process reduces rugs by guaranteeing that every token created is safe, with no presales and full transparency in allocation.<br><br>
+					Baby Turbo token was created through an Raydium liquid pull fair launch, ensuring safety, transparency, and fairness in its distribution.<br><br>
 
-					One billion Baby Turbo tokens were minted. All one billion tokens were distributed fairly, with no insider advantages or early allocations.	Once Baby Turbo reached a market cap of $69k, $12k of liquidity was deposited into Uniswap and permanently burned to ensure stability and trust. Holders could sell at any time to lock in profits or manage their positions, emphasizing accessibility and liquidity.<br><br>
+					One billion Baby Turbo tokens were minted. All one billion tokens were distributed fairly, with no insider advantages or early allocations. Holders could sell at any time to lock in profits or manage their positions, emphasizing accessibility and liquidity.<br><br>
 					
-					The launch demonstrated Ape Store’s commitment to protecting investors while fostering a thriving community-driven ecosystem.
+					The launch Baby Turbo princips commitment to protecting investors while fostering a thriving community-driven ecosystem.
                 </div>
 				<div class="col-12 col-md-3 col-lg-3">
                     <img width="200px" src="babynomics.png" alt="Baby Turbo" user-select="none" class="img-fluid">
