--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="btn btn-primary btn-icon" href="https://app.uniswap.org/swap?outputCurrency=0x8600649f2BdF9C18F2358EbCFb08DAcCf1f30d39&chain=base">Buy Baby Turbo</a>
+                        <a class="btn btn-primary btn-icon" href="https://raydium.io/swap/?inputMint=sol&outputMint=xxxxxxxxx">Buy Baby Turbo</a>
                     </li>
                 </ul>
             </div>
@@ -46,18 +46,18 @@
                     <p class="section-detail-text mt-3 mb-5">
 					Baby Turbo is the resilient baby frog of Solana Blockchain with an engaging community and the most innovative AI-driven apps. Join us as we create a fresh and dynamic experience in the world of meme coins!</p>
 					<div class="contract-address-title-text text-center">Contract Address</div>
-					<div class="contract-address-text text-center">0x8600649f2BdF9C18F2358EbCFb08DAcCf1f30d39</div>
+					<div class="contract-address-text text-center">xxxxxxxxx</div>
 					<div class="d-flex justify-content-center gap-3 mt-3">
-						<a href="https://t.me/basedbabyturbio" target="_blank" class="btn-icon">
+						<a href="https://t.me/BturboSol" target="_blank" class="btn-icon">
 							<img src="telegram.png" alt="Telegram" class="icon">
 						</a>
-						<a href="https://x.com/erjgoejgnegkneg" target="_blank" class="btn-icon">
+						<a href="https://x.com/BturboSol" target="_blank" class="btn-icon">
 							<img src="x.png" alt="X" class="icon">
 						</a>
-						<a href="https://dexscreener.com/base/0x02578575c7d9384b1f8abd3e65417a4e07c0c4b2" target="_blank" class="btn-icon">
+						<a href="https://dexscreener.com/solana/xxxxxxxxx" target="_blank" class="btn-icon">
 							<img src="dexscreener.png" alt="Dexscreener" class="icon">
 						</a>
-						<a href="https://www.dextools.io/app/en/token/babyturbo?t=1737373086082" target="_blank" class="btn-icon">
+						<a href="https://www.dextools.io/app/en/solana/pair-explorer/xxxxxxxxx" target="_blank" class="btn-icon">
 							<img src="dextools.png" alt="Dextools" class="icon">
 						</a>
 					</div>
@@ -200,10 +200,10 @@
 		There is no formal team or roadmap, the coin is completely useless and for enterainment purposes only.</div>
 	  </div>
 		<div class="d-flex justify-content-center gap-2 mt-2">
-			<a href="https://t.me/basedbabyturbio" target="_blank" class="btn-icon">
+			<a href="https://t.me/BturboSol" target="_blank" class="btn-icon">
 				<img src="telegram.png" alt="Telegram" class="icon" style="width:20px">
 			</a>
-			<a href="https://x.com/erjgoejgnegkneg" target="_blank" class="btn-icon">
+			<a href="https://x.com/BturboSol" target="_blank" class="btn-icon">
 				<img src="x.png" alt="X" class="icon" style="width:20px">
 			</a>
 		</div>
